@@ -75,6 +75,8 @@ type Harvester struct {
 	// event/state publishing
 	forwarder    *harvester.Forwarder
 	publishState func(*util.Data) bool
+
+	onTerminate func()
 }
 
 // NewHarvester creates a new harvester
@@ -154,6 +156,10 @@ func (h *Harvester) Setup() error {
 
 // Run start the harvester and reads files line by line and sends events to the defined output
 func (h *Harvester) Run() error {
+	// Allow for some cleanup on termination
+	if h.onTerminate != nil {
+		defer h.onTerminate()
+	}
 	// This is to make sure a harvester is not started anymore if stop was already
 	// called before the harvester was started. The waitgroup is not incremented afterwards
 	// as otherwise it could happened that between checking for the close channel and incrementing
