@@ -79,7 +79,9 @@ func (p *Prospector) Run() {
 		h := NewHarvester(pool.Get())
 		h.forwarder = forwarder
 
-		p.registry.Start(h)
+		if err := p.registry.Start(h); err != nil {
+			logp.Err("Harvester start failed: %s", err)
+		}
 	}
 }
 
